fix(data-workspace): reduce header height (#108)
* fix(data-workspace): reduce header height

* chore: upgrade @dhis2/ui so it contains table header fixes

* fix: update broken imports

* fix: adress failing tests due to new layering mechanism

* chore: dedupe and refresh yarn lock

* fix(data-workspace): clean up CSS for overflowing table header text

--- a/src/data-workspace/display/table.module.css
+++ b/src/data-workspace/display/table.module.css
@@ -5,18 +5,8 @@
     font-weight: normal;
 }
 
-table.dataTable {
-    width: auto;
-}
-
-th.cell, td.cell {
-    height: auto;
-    min-height: 45px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-
-.labelCellContent, .labelCellContent {
+.labelCellContent,
+.labelCellContent {
     display: block;
     max-width: 480px;
 }
